--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: KatsuAnimation
-version: '1.0-SNAPSHOT'
+version: '${project.version}'
 main: io.github.maazapan.katsuAnimation.KatsuAnimation
 api-version: 1.16
 
