UpdateChecker and Metrics added

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,13 +34,15 @@ config:
 # You can use the color codes with the symbol "&"
 messages:
   compile: "&aSuccess compile the texture pack saved in plugins/KatsuParkour/resoucepack.zip"
-  no-args: "&cPlease complete command, use /kta help for more information."
+  no-args: "&cPlease complete command, use /kta for see available commands."
   no-args-create: "&cPlease complete command, use /kta create <gif> <size> <height>"
   no-args-delete: "&cPlease complete command, use /kta delete <gif>"
   no-args-animation: "&cPlease complete command, use /kta animation <play/stop> "
   no-args-animation-stop: "&cPlease complete command, use /kta animation stop <player>"
   no-args-animation-play: "&cPlease complete command, use /kta animation play <gif> <repeat> <tick-update> <player>"
   no-active-animation: "&cThe player does not have an active animation."
+  no-args-apply: "&cPlease complete command, use /kta apply <player>"
+  no-permission: "&cYou do not have permission to use this command."
   gif-not-found: "&cGif not found, make sure the gif is in the plugins/KatsuParkour/gifs folder."
   gif-not-exist: "&cNo exist any gif with this name."
   gif-exist: "&cThe gif with this name already exist, if you want to delete use /kta delete <gif>."
@@ -52,6 +54,8 @@ messages:
   play-animation-all: "&aSuccess play the animation &e%animation% &ato the all players.."
   stop-animation: "&aSuccess stop the animation to the player."
   stop-animation-all: "&aSuccess stop the animation to the all players."
+  apply-texture-all: "&aSuccess apply the texture to the all players."
+  apply-texture: "&aSuccess apply the texture to the %player%."
   delete-texture: "&aSuccess delete the texture, use /kta compile to compile again the texture pack."
   create-texture: "&aSuccess create the texture, use /kta compile to compile the texture pack."
   texture-host-not-started: "&cThe texture pack host is not started, see the console for more information."
