--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
                 <configuration>
-                    <outputDirectory>C:\Users\Barri\OneDrive\Escritorio\Purpur 1.20.4\plugins</outputDirectory>
+                    <outputDirectory>./jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
